I have had to change the sizes of the background picture to make sure that it is going to look good on all devices. It was looking pretty bad on ios devices.

--- a/less/home-page.less
+++ b/less/home-page.less
@@ -1,14 +1,15 @@
 .home{
     background: url(/images/tacos-bg.jpg) no-repeat scroll center top;
-    background-size: 165%;
+    background-size: 185%;
     background-attachment: fixed;
     background-position: top;
 
     @media @tablet{
-        background-size: 100%;
+        background-size: 165%;
     }//tablet
 
     @media @desktop{
+        background-size: 100%;
         background-position: 0 70%;
     }//desktop
 }
